EP AT fixed button alignment on home page

--- a/styles/home/_HomeSearch.scss
+++ b/styles/home/_HomeSearch.scss
@@ -1,7 +1,6 @@
 .HomeSearch {
   width: 782px;
   display: flex;
-  padding: 12px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -138,7 +137,7 @@
     }
   }
 
-  @media only screen and (max-width: 767px) {
+  @media only screen and (max-width: 830px) {
     width: 100%;
 
     &__campusSelector {
