--- a/styles/pages/_Home.scss
+++ b/styles/pages/_Home.scss
@@ -57,10 +57,10 @@
     text-align: center;
     margin: 0 auto;
 
-    @media only screen and (min-width: 1025px) {
+    @media only screen and (min-width: 1100px) {
+      text-align: left;
       margin: 0;
       margin-left: 10% !important;
-      text-align: left;
     }
   }
 
@@ -68,7 +68,7 @@
     height: 60px;
     z-index: 10;
 
-    @media only screen and (min-width: 1025px) {
+    @media only screen and (min-width: 830px) {
       height: 112px;
       margin-bottom: 20px;
       margin-right: 20px;
